# trader

./: .dockerignore  .env.alerting.example  .env.example  .env.test  .env.testnet.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENT-ORCHESTRATION.md  ARCHON-INTEGRATION.md  BMAD-INTEGRATION-PLAN.md  CLAUDE.md  DEPENDENCIES.md  DOCUMENTATION-INDEX.md  Dockerfile  FRAMEWORK-USAGE-GUIDE.md  Makefile  PROJECT-STATUS-OVERVIEW.md  QUICK-START.md  README.md  SETUP-COMPLETE.md  SPRINT-3-STREAM-B-IMPLEMENTATION-COMPLETE.md  TESTING_GUIDE.md  VISUAL-REFERENCE.md  WORKSPACE-SETUP-SUMMARY.md  coverage.json  coverage.xml  docker-compose.yml  fix_decimal_tests.py  init-agent-workspace.sh  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements-test.txt  requirements.txt  test-results-integration.xml
.agent-system/registry/: dependencies.json  epics.json  milestones.md  stories.json  tasks.json
.agent-system/sync/: bmad-sync.json  broadcasts.json  handoffs.json
.claude/: PROJECT-TEMPLATE.md  context-loader.yaml
PRD/: llm_crypto_trading_prd.md
PRPs/: PRP-LIFECYCLE.md  README.md  phase3-team-commands.md  phase3-test-fix-orchestration.md
deployment/: DEPLOYMENT-GUIDE.md  DEPLOYMENT-OPTIONS.md
docs/: AGENT_COORDINATION_SUMMARY.md  DOCKER_SETUP_GUIDE.md  PAPER_TRADING_SETUP_GUIDE.md  PERFORMANCE-OPTIMIZATION-REPORT.md  PRODUCTION_READINESS_CHECKLIST.md  SPRINT-3-STREAM-C-COMPLETION.md  SPRINT-3-STREAM-C-IMPLEMENTATION-PLAN.md  TASK_BRIEF_VALIDATION_ENGINEER_1.md  TEAM-FIX-ALPHA-BRIEF.md  TEAM-FIX-BRAVO-BRIEF.md  TEAM-FIX-CHARLIE-BRIEF.md  TEAM-FIX-DELTA-BRIEF.md  TEAM_ACTIVATION_COMMANDS.md  TEST-FIX-ORCHESTRATION-PLAN.md  TESTNET_INTEGRATION_ARCHITECTURE.md  TESTNET_TASK_BREAKDOWN.md  TEST_COVERAGE_IMPROVEMENT_FINAL_REPORT.md  TEST_COVERAGE_ORCHESTRATION.md  TEST_COVERAGE_ORCHESTRATION_PLAN.md  TEST_COVERAGE_PROGRESS_DASHBOARD.md  TEST_COVERAGE_REPORT.md  VALIDATION_REPORT_2025-10-30.md
infrastructure/: README.md
kubernetes/: README.md  namespace.yaml
scripts/: activate-fix-teams.sh  activate-team-echo.sh  activate-team-foxtrot.sh  activate-team-golf.sh  activate-team-hotel.sh  agent-task-manager.py  archon-sync.py  bmad-integration.py  bmad-orchestrator.py  complete-setup.py  generate-agent-views.py  monitor-test-fixes.py  phase3-coordinator.sh  run_paper_trading_test.py  setup-workspace.py  smoke-tests.sh  story-dev.py  verify-dependencies.py  verify-deployment.sh
stacks/: .stack-detection.yaml
workspace/: __init__.py  celery_app.py
(+453 files in other folders)
