[project]
name = "dynamo-prp-share"
version = "0.1.0"
description = "Library of assets and prompts for Ai Engineering"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.20",
    "psutil>=6.1.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
]

[tool.setuptools]
packages = ["workspace"]
